--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "lodash": "^4.17.5",
@@ -13,7 +14,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "webpack": "^4.5.0"
+    "webpack": "^2.6.1"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
@@ -34,5 +35,8 @@
   "bugs": {
     "url": "https://github.com/brainzilla79/evernote-clone/issues"
   },
-  "homepage": "https://github.com/brainzilla79/evernote-clone#readme"
+  "homepage": "https://github.com/brainzilla79/evernote-clone#readme",
+  "devDependencies": {
+    "webpack-cli": "^2.0.14"
+  }
 }
