--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "webpack": "^2.6.1"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
@@ -37,6 +38,7 @@
   },
   "homepage": "https://github.com/brainzilla79/evernote-clone#readme",
   "devDependencies": {
+    "redux-logger": "^3.0.6",
     "webpack-cli": "^2.0.14"
   }
 }
