--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-waypoint": "^8.0.1",
     "redux": "^3.7.2",
     "webpack": "^2.6.1"
   },
